# simple-pos-api

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: config.rs  main.rs  routes.rs
src/handlers/: auth.rs  category.rs  mod.rs  product.rs  transaction.rs
src/middlewares/: auth_guard.rs
src/models/: auth_model.rs  categories_model.rs  filter_model.rs  mod.rs  product.rs  products_model.rs  transactions_model.rs
src/routes/: mod.rs  product.rs
src/services/: image_service.rs  mod.rs
