[package]
name = "pos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "rust_decimal"]}
tokio = { version = "1.40.0", features = ["sync", "macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["serde"]}
