[package]
name = "pos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rust-s3 = "0.35.1"
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "rust_decimal", "chrono"] }
tokio = { version = "1.40.0", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["trace"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
