[package]
name = "pos-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["multipart"] }
chrono = { version = "0.4.40", features = ["serde"] }
data-encoding = "2.8.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rust-s3 = "0.35.1"
rust_decimal = "1.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "rust_decimal", "chrono"] }
tokio = { version = "1.44.1", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
